# MWave-zephyr-module

./: CMakeLists.txt  Kconfig  README.md  build.yaml
.github/workflows/: build.yml
boards/arm/mwave/: Kconfig  Kconfig.board  Kconfig.defconfig  lcp_20.dtsi  lcp_33.dtsi  mwave-33-pinctrl.dtsi  mwave-pinctrl.dtsi  mwave_33.dts  mwave_33.keymap  mwave_33.yaml  mwave_33_defconfig  mwave_transform.dtsi  mwavenumpad.dts  mwavenumpad.keymap  mwavenumpad.yaml  mwavenumpad_defconfig  mwavetest_20.dts  mwavetest_20.keymap  mwavetest_20.yaml  mwavetest_20_defconfig  mwavetest_33.dts  mwavetest_33.keymap  mwavetest_33_defconfig
config/: west.yml
drivers/sensor/: CMakeLists.txt
drivers/sensor/battery/: CMakeLists.txt  Kconfig  battery_common.c  battery_common.h  battery_voltage_divider.c
dts/behaviors/: advertising_mode.dtsi
dts/bindings/: zmk,advertising-mode.yaml
dts/bindings/behaviors/: zmk,behavior-advertising-mode.yaml  zmk,behavior-stp-indicators.yaml
dts/bindings/sensor/: kinesis,battery-voltage-divider.yaml
include/dt-bindings/: advertising_mode.h  battery_chemistry.h
include/zmk/: ble_add.h  indicators.h
src/: ble.c  endpoints.c  keypad_indicators.c  kscan_sideband_behaviors.c  mwave_indicators.c
src/behaviors/: behavior_advertising_mode.c  behavior_backlight.c  behavior_mouse_key_press.c  behavior_stp_indicators.c
